Mon May 01 15:56:32 1995  Chris Provenzano (proven@mit.edu)

        * auth_con.c (krb5_auth_con_free()) :
		Free all the data associated with the auth_context.

	* auth_con.c (krb5_auth_con_setkey()) : Removed.
	* mk_rep.c (mk_rep()),
                The krb5_mk_rep() routine must always encode the data in
                the keyblock of the ticket, not the subkey.

	* cleanup.h, auth_con.c (krb5_auth_con_setports()) : Added.
        * auth_con.h, mk_cred.c (mk_cred()), mk_priv.c (mk_priv()),
	* mk_safe.c (mk_safe()), rd_cred.c (rd_cred()), 
	* rd_priv.c (rd_priv()), rd_safe.c (rd_safe()) :
		Changes to auth_context to better support full addresses.

Sat Apr 29 00:09:40 1995  Theodore Y. Ts'o  <tytso@dcl>

	* srv_rcache.c (krb5_get_server_rcache): Fix fencepost error which
		caused an access beyond the allocated memory of piece->data.

	* rd_priv.c (krb5_rd_priv_basic): Call krb5_free_priv_enc_part to free 
		the entire privenc_msg structure.

Fri Apr 28 09:54:51 EDT 1995	Paul Park	(pjpark@mit.edu)

	Move adm_rw.c from libkrb5 to libkadm.

Fri Apr 28 08:36:03 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* init_ctx.c (krb5_free_context): Extra semicolon meant the etypes
		field in the context was never being freed.

Fri Apr 28 01:44:51 1995  Chris Provenzano  (proven@mit.edu)

        * send_tgs.c (krb5_send_tgs()), gc_via_tkt.c (krb5_get_cred_via_tkt()):
		Removed krb5_cksumtype argument.

Thu Apr 27 21:36:01 1995  Chris Provenzano  (proven@mit.edu)

	* auth_con.c (krb5_auth_con_getaddrs() and krb5_auth_con_getflags()):
		Added for completeness.
	* mk_req_ext.c (krb5_mk_req_extended()) : Don't send the 
		AP_OPTS_USE_SUBKEY option over the wire.

Thu Apr 27 17:40:20 1995 Keith Vetter (keithv@fusion.com)

	* adm_rw.c, mk_cred.c, rd_cred.c:
	   malloc on the PC must be size SIZE_T not int32.
	* adm_rw.c: krb5_free_adm_data second argument now a krb5_int32.

Thu Apr 27 16:33:17 EDT 1995	Paul Park	(pjpark@mit.edu)
