@@ -193,23 +193,33 @@ krb5_mk_priv(context, auth_context, userdata, outbuf, outdata)
     CLEANUP_INIT(2);
 
     if (auth_context->local_addr) {
-	if (!(retval = krb5_make_fulladdr(context, auth_context->local_addr,
-				 auth_context->local_port, &local_fulladdr))){
-	    CLEANUP_PUSH(&local_fulladdr.contents, free);
-	    plocal_fulladdr = &local_fulladdr;
-        } else {
-    	    goto error;
-        }
+	if (auth_context->local_port) {
+	    if (!(retval = krb5_make_fulladdr(context, auth_context->local_addr,
+				  	      auth_context->local_port, 
+					      &local_fulladdr))) {
+	    	CLEANUP_PUSH(&local_fulladdr.contents, free);
+	    	plocal_fulladdr = &local_fulladdr;
+            } else {
+    	    	goto error;
+            }
+	} else {
+	    plocal_fulladdr = auth_context->local_addr;
+	}
     }
 
     if (auth_context->remote_addr) {
-	if (!(retval = krb5_make_fulladdr(context, auth_context->remote_addr,
-				 auth_context->remote_port, &remote_fulladdr))){
-	    CLEANUP_PUSH(&remote_fulladdr.contents, free);
-	    premote_fulladdr = &remote_fulladdr;
- 	} else {
-	    CLEANUP_DONE();
-	    goto error;
+    	if (auth_context->remote_addr) {
+	    if (!(retval = krb5_make_fulladdr(context,auth_context->remote_addr,
+				 	      auth_context->remote_port, 
+					      &remote_fulladdr))){
+	    	CLEANUP_PUSH(&remote_fulladdr.contents, free);
+	    	premote_fulladdr = &remote_fulladdr;
+ 	    } else {
+	        CLEANUP_DONE();
+	        goto error;
+	    }
+	} else {
+	    premote_fulladdr = auth_context->remote_addr;
 	}
     }
 
