@@ -1,3 +1,10 @@
+
+Tue May 02 19:29:18 1995  Chris Provenzano (proven@mit.edu)
+
+        * mk_cred.c (mk_cred()), mk_priv.c (mk_priv()), mk_safe.c (mk_safe()),
+	* rd_cred.c (rd_cred()), rd_priv.c (rd_priv()), rd_safe.c (rd_safe()):
+		Don't call krb5_make_fulladdrs() if a port isn't specified.
+
 Mon May 01 15:56:32 1995  Chris Provenzano (proven@mit.edu)
 
         * auth_con.c (krb5_auth_con_free()) :
